Version 5.5 - Second attempt to fix Overflow bug.-

--- a/style/style.scss
+++ b/style/style.scss
@@ -32,8 +32,7 @@ body {
     gap: 5px;
     text-align: center;
     place-items: center;
-    min-height: 90%;
-    min-width: 90%;
+    max-width: 100%;
     grid-template-areas:
         "header"
         "hr1"
@@ -63,12 +62,13 @@ body {
     margin: 10px auto;
     padding: 10px;
     width: 100%;
+    max-width: 1000px;
+    height: auto;
     p {
         @include text;
     }
     .mediaPlayer {
         width: 40%;
-        align-self: center;
         margin: 40px auto;
         button {
             width: 150px;
@@ -88,7 +88,6 @@ body {
 .main { grid-area: main;
     margin: 10px auto;
     padding: 10px;
-    width: 100%;
     max-width: 100%;
     height: auto;
     .subGrid { display: grid;
@@ -114,6 +113,14 @@ body {
             place-items: center;
             margin: 10px auto;
             padding: 10px;
+            img {
+                max-width: 100%;
+                height: auto;
+                transition: 3s linear;
+                &:hover {
+                    transform: scale(1.05);
+                }
+            }
             .botones {
                 margin: 10px auto;
                 button {
